--- a/1.ipynb
+++ b/1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONt325CTkbNr5kKiSjC7BQ",
+      "authorship_tag": "ABX9TyMVDssGZ53aJHiMsjZLuJ0h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,6 +177,232 @@
           "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_arr = np.array([1,2,3,4,5])"
+      ],
+      "metadata": {
+        "id": "h7Wq0QNfitaq"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "L8-C9rWHjF_r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.zeros((3,4))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3_-EKkWCjiQa",
+        "outputId": "db635ed8-bb92-4496-f2ff-1c917b6bd6a3"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "type casting\n",
+        "stype (dtype)\n"
+      ],
+      "metadata": {
+        "id": "USfE3SpwjW6S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.zeros((10),dtype='int')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tsK77ESCjqvS",
+        "outputId": "de4e9100-57d7-4393-b17d-a62476be7a6f"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.zeros((10),dtype='float')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LtGnx9yjj0Yx",
+        "outputId": "b8304fea-4339-4f74-fbff-5f598ac89d41"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.zeros((10),dtype='str')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZA2OIR7sj7jA",
+        "outputId": "4df56901-d95d-415d-818d-4470879301fb"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['', '', '', '', '', '', '', '', '', ''], dtype='<U1')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = np.arange(0,5)\n",
+        "n\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EJCc2pmMkFjN",
+        "outputId": "295a76db-06b9-42af-ba4c-03ad04f3b0dd"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m = np.arange(10,5, -1)\n",
+        "m\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NaGS5De1kO2Y",
+        "outputId": "54b36bc0-5c20-4fde-ee95-ab288be3fad7"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10,  9,  8,  7,  6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = np.arange(1,10)\n",
+        "n\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hvcxwkeWkVXg",
+        "outputId": "b6c5c445-def8-486d-d823-746ce3e0beff"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "942_RBtUku7o"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
