--- a/1.ipynb
+++ b/1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVDssGZ53aJHiMsjZLuJ0h",
+      "authorship_tag": "ABX9TyONXYujIUJ5/wl/oWMFqdXv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -397,9 +397,732 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "ones = np.ones(5)\n",
+        "ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "942_RBtUku7o",
+        "outputId": "d77ff5b9-e1f2-42a3-9f39-1e85c4655185"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 1., 1., 1., 1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones = np.ones((3,4))\n",
+        "ones\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IUx53TjElbxw",
+        "outputId": "5a199f62-e249-4360-dfc9-3864e5c3a892"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones = np.ones((3,4),dtype=\"int\")\n",
+        "ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5vtfmvgolkkQ",
+        "outputId": "f7d39793-3a3c-4908-9f8b-dd6b97c2e37d"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#1 3d array tensor and to creater 3d array\n"
+      ],
+      "metadata": {
+        "id": "Mh2y2HejmMXK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr3d = np.array([\n",
+        "    [\n",
+        "        [1,2],\n",
+        "        [3,4],\n",
+        "    ],\n",
+        "    [\n",
+        "        [5,6],\n",
+        "        [8,8],\n",
+        "    ]\n",
+        "\n",
+        "])\n",
+        "arr3d.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LoXRHfV5mYXQ",
+        "outputId": "5d74c3c3-d5cc-4627-90ec-60c9641cd829"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_arr = np.full((3,3),5)\n",
+        "new_arr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-gACbIA5muKX",
+        "outputId": "35b59c19-4d8f-4d63-fe2f-287e749e9928"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5, 5, 5],\n",
+              "       [5, 5, 5],\n",
+              "       [5, 5, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_arr = np.full((3,2),5)\n",
+        "new_arr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wkKnSO1FnHXg",
+        "outputId": "e64bd8dc-cd03-4ae0-88d1-0d0b4cd21b97"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5, 5],\n",
+              "       [5, 5],\n",
+              "       [5, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "xpHuhXpTncnA"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = random.randint(1,100)\n",
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PlzIp5dPnnTA",
+        "outputId": "8083b9dd-f70d-4f86-842d-91352e03cbc9"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "47"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = random.random()\n",
+        "n\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "seZGOaPun3lR",
+        "outputId": "68bcd0b2-74d1-4313-a596-4b8349025e32"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.17933624378033897"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n2 = random.choices([1,2,3,4,5,6])\n",
+        "n2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0lwtotawn8j4",
+        "outputId": "91aa3fb1-2f42-43a4-9d26-9b06347f85b5"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = np.linspace(1,18,5)\n",
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2D8wDuPZoHvA",
+        "outputId": "479303d4-181b-4900-cf6f-954fd57f69cf"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.  ,  5.25,  9.5 , 13.75, 18.  ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = np.linspace(1,5,5)\n",
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O-5JTNUmpeJ_",
+        "outputId": "17bb86ab-50a6-4b6d-b374-31d5ea81c9c9"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3., 4., 5.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = np.linspace(1,100,1)\n",
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lte_TjCyprmv",
+        "outputId": "97e3b936-7980-4a86-b63a-545505ee8c1c"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "linespace\n",
+        "  \n",
+        " or logspace\n",
+        " log"
+      ],
+      "metadata": {
+        "id": "EOO6iJArqAbK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n =np.logspace(1,10,10)\n",
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7oqMs3ATqErZ",
+        "outputId": "8307db11-f95e-4992-9771-22eefe0849e8"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.e+01, 1.e+02, 1.e+03, 1.e+04, 1.e+05, 1.e+06, 1.e+07, 1.e+08,\n",
+              "       1.e+09, 1.e+10])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n =np.linspace(1,10,10)\n",
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a6lmNoUKqJaW",
+        "outputId": "d08be5ae-bf48-48e9-fea6-ef301183637d"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.array([1,2,3,4,5,6,7,8,9])\n",
+        "arr = np.array(data)\n",
+        "arr{0}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "id": "jAB_Xvpmqewf",
+        "outputId": "0edec84e-e448-4212-eea6-08118ddb1d66"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-3294781252.py, line 3)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-3294781252.py\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    arr{0}\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# fancy indexing"
+      ],
+      "metadata": {
+        "id": "JfJnx0eQrcdg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.array([1,2,3,4,5,6,7,8,9])\n",
+        "arr = np.array(data)\n",
+        "mask = [1,5,0]\n",
+        "arr[mask]\n",
+        "arr[[2,4,3,1]]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lNDTywgLrUHG",
+        "outputId": "b03388b3-1b2b-468e-eb8d-48fdcd4f93bb"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 5, 4, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#normal indexing on 2d array"
+      ],
+      "metadata": {
+        "id": "6yDFBqxWr9qP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "aar2d = np.array([\n",
+        "    [1,2,3],\n",
+        "    [4,5,6],\n",
+        "    [7,8,9]\n",
+        "])\n",
+        "aar2d[1,2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PlolgbdQuv9O",
+        "outputId": "d217a66f-7eec-4208-c15f-3c30bf350b01"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(6)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# number of elements in each column should be shame in numoy\n",
+        "# array_name = [row, column]\n",
+        "aar2d = np.array([\n",
+        "    [1,2,3],\n",
+        "    [4,5,6],\n",
+        "    [7,8,9]\n",
+        "])\n",
+        "aar2d[1:3,:] # using sliing (1:3 for 1 to 3 row ) and ( : ) for all"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zw3Eko3TrtwO",
+        "outputId": "8662316b-95ad-4b09-8a7e-21878e908327"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4, 5, 6],\n",
+              "       [7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "aar2d = np.array([\n",
+        "    [1,2,3],\n",
+        "    [4,5,6],\n",
+        "    [7,8,9]\n",
+        "])\n",
+        "aar2d[:,1:3] # using sliing (1:3 for 1 to 3 row ) and ( : ) for all"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "coYkCKnIsjv-",
+        "outputId": "1244b661-7bf6-4e8f-cffb-a37f956300df"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2, 3],\n",
+              "       [5, 6],\n",
+              "       [8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "aar2d = np.array([\n",
+        "    [1,2,3],\n",
+        "    [4,5,6],\n",
+        "    [7,8,9],\n",
+        "    [10,11,12]\n",
+        "])\n",
+        "aar2d[1:3,0:2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZJRxgweLuY9N",
+        "outputId": "972918d7-e302-4ab2-8a10-df74132d0f74"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4, 5],\n",
+              "       [7, 8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (my_list[::2]) [0, 2, 4, 6, 8]\n",
+        "# aar2d[start:stop:step]\n",
+        "aar2d[::2, ::2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4WmUZ9tvulEt",
+        "outputId": "37ae8799-c950-45cb-d01f-fa4f61c15726"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 3],\n",
+              "       [7, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = [1,2]*2 # here it is dobule printed\n",
+        "print(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kXNPRY1ZvbbN",
+        "outputId": "c9ff3485-fb9a-4b93-8808-fe20890be5df"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 1, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = np.array([1,2])*2 # in these it get multiplied by 2\n",
+        "print(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VKU3_9o6whxV",
+        "outputId": "d0174afc-12ec-4f74-9486-e413a7f5d097"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time"
+      ],
+      "metadata": {
+        "id": "busaLfbdwpqt"
+      },
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "942_RBtUku7o"
+        "id": "GgVdfJlCw4GF"
       },
       "execution_count": null,
       "outputs": []
